# SARA-EDU

./: .replit  package.json  pnpm-lock.yaml  pyproject.toml  sara_protocol.env
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  aws-infrastructure.md  confluent-aws-migration.md  shri-academy-student-features.md
.github/workflows/: deploy-cyberdemon.yml  deploy-monorepo.yml  deploy-opentag.yml  deploy-service.yml
artifacts/api-server/: Dockerfile  build.mjs  package.json
artifacts/sri-platform/: index.html  package.json  prerender.mjs
artifacts/threat-detection-service/: build.mjs  package.json
contracts/: SaraToken.flat.sol  SaraToken.sol  hardhat.config.ts
ignition/modules/: SaraProtocol.js
infrastructure/: README.md
infrastructure/airflow/: requirements.txt
infrastructure/codebuild/: buildspec-cyberdemon.yml  buildspec-opentag.yml
infrastructure/scripts/: bootstrap.sh
infrastructure/terraform/: academic.tf  amplify.tf  blockchain.tf  blockchain_extended.tf  cicd.tf  cloudfront.tf  compute.tf  confluent.tf  deep_learning.tf  developer_tools.tf  ecs.tf  elasticache.tf  ground_station.tf  iam.tf  lambda_mitigation.tf  ml_services.tf  msk.tf  mwaa.tf  opensearch.tf  opensearch_extended.tf  outposts.tf  outputs.tf  providers.tf  rds.tf  route53.tf  s3.tf  sagemaker.tf  sagemaker_extended.tf  sagemaker_hyperpod.tf  tensorflow.tf  terraform.tfvars.example  variables.tf  vpc.tf
shri-academy-api/: .env.example  =0.8.0  Dockerfile  async_kafka_utils.py  main.py  requirements.txt  sagemaker_client.py  syllabus.py
(+91 files in other folders)
