[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.40",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "openai>=1.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.50.0",
    "mlflow>=2.14.0",
    "pypdf>=4.0.0",
]
